style.css
html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Inter', sans-serif;
    min-height: 100vh;
    padding: 0;
    margin: 0;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    position: relative;
}

.taskbar {
    list-style-type: none;
    width: 100vw;
    max-width: 100%;
    padding-top: 0;
    margin: 0px 0px;
    height: 7vh;
    position: fixed;
    
    /* Make taskbar overlap everything */
    z-index: 1;

    background-color: lightgray;
}

.taskbar .links {
    margin-left: auto;
    width: 20vw;
    position: fixed;
    top: 2vh;
    right: 5vw;
    text-align: right;

}

.taskbar li {
    display: inline;    
}

.taskbar li a {
    text-decoration: none;
    font-size: 20px;
    color: black;
    margin-right: 2px;
}

.taskbar .name {
    width: 20vw;
    position: absolute;
    top: 2vh;
    left: 5vw;
    text-align: left;

    /* border: 1px solid orange; */
}

.taskbar .name a{
    font-size: 20px;
    color: black;
    margin-left: 10px;
    font-weight: bold;
}

.intro-container {
    display: flex;
    position: relative;
    top: 25vh;
    width: 45vw;
    height: 50vh;   
    margin-left: 25vw;

    /* border: 1px solid orange; */
}

.intro-container .bio-container {
    position: relative;
    margin-left: 25px;
    margin-top: 0;

    /* border: 1px solid orange; */
}

.intro-container h1 {
    font-size: 70px;
    margin-top: 60px;
    margin-bottom: 30px;
}

.intro-container h3 {
    font-size: 25px;
    margin-top: 0;
    margin-bottom: 0;
}

.intro-container p {
    margin-top: 10px;
}

.intro-container .picture {
    align-self: center;
    object-position: left;
}

.intro-container img {
    border-radius: 50%;
}

.project-container {
    margin-top: 50vh;
    margin-bottom: 25px;
    padding: 0;
    top: 100vh;
    width: 100vw;
    max-width:100%;
    left: 0;

    /* border: 2px solid orange; */
}

#project-section {
    padding-top: 30px;
}

.project-container .project-header {
    background-color: lightgray;
    border: 2px solid lightgray;
    position: relative;
    font-size: 22px;

    text-align: center;
    padding: 0;
    margin-bottom: 0;

}

.project-container .example-container {
    position: relative;
    background-color: white;
    display: grid;
    grid-column-gap: 50px;
    grid-row-gap: 50px ;
    grid-template-columns: repeat(2, 1fr);
    justify-content:space-evenly;
    margin-top: 50px;
    margin-bottom: 25px;

}

.project-container .word-game,
.project-container .casino-sim,
.project-container .hackathon,
.project-container .hangman {
    position: relative;
    /* border: 2px solid red; */
}

.word-game .word-picture,
.hackathon .hackathon-picture {
    position: relative;
    left: 50%;
}

.word-game .word-info,
.hackathon .hackathon-info {
    position: absolute;
    left: 10%;
    top: 35%;
    right: 55%;
}

.casino-sim .casino-picture, 
.hangman .hangman-picture {
    position: relative;
    left: 4%;
}

.casino-sim .casino-info,
.hangman .hangman-info {
    position: absolute;
    left: 55%; 
    top: 35%;
    right: 10%;   
}

.example-container img {
    transition-duration: 0.5s; 
    transform: scale(1);
}

.example-container img:hover {
    transition-duration: 0.5s;
    transform: scale(1.1);
}

.footer-container {
    background-color: lightgray;
    left: 0;
    bottom: 0;  
    height: 10vh;
    display: grid;
    grid-template-columns: repeat(4, 1fr);  
    
    border-top: 1px solid lightgrey;
    border-right: none;
    border-left: none;
    border-bottom: none;

}

.phone-container, .email-container, .socials-container, .tbd-container {
    display: block;
    /* border: 2px solid red; */
    margin-left: 60px;
}

